Address review comments
- volatile instead of synchronized
- handle registry enablement setting in APMPlugin
- simpify createComponents and close:
  always create registry, never return it